통화왔을때 방송 수신자 달아야됨 --> 서비스로 녹음 기능 --> m4a컨버팅 기능

--- a/KimSuKiNaverAI/app/src/main/AndroidManifest.xml
+++ b/KimSuKiNaverAI/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.STORAGE" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +28,14 @@
         <activity android:name=".URLMediaPlayerActivity">
 
         </activity>
+
+        <receiver android:name=".IncomingCallBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE"/>
+            </intent-filter>
+        </receiver>
+
+
 
     </application>
 
