--- a/KimSuKiNaverAI/app/build.gradle
+++ b/KimSuKiNaverAI/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    implementation "android.arch.persistence.room:runtime:2.2.2"
+
 
 
 }
