--- a/KimSuKiNaverAI/app/src/main/AndroidManifest.xml
+++ b/KimSuKiNaverAI/app/src/main/AndroidManifest.xml
@@ -29,14 +29,16 @@
 
         </activity>
 
-        <receiver android:name=".IncomingCallBroadcastReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.PHONE_STATE"/>
+        <receiver
+            android:name=".IncomingCallBroadcastReceiver"
+            android:enabled="true">
+            <intent-filter android:priority="1000">
+                <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
         </receiver>
 
 
-
+        <service android:name="MyService"></service>
     </application>
 
 </manifest>
