--- a/KimSuKiNaverAI/app/src/main/AndroidManifest.xml
+++ b/KimSuKiNaverAI/app/src/main/AndroidManifest.xml
@@ -4,10 +4,12 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
+    <uses-permission android:name="android.permission.STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -25,15 +27,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".URLMediaPlayerActivity">
+        <activity android:name=".URLMediaPlayerActivity"></activity>
 
-        </activity>
-
-        <receiver
-            android:name=".IncomingCallBroadcastReceiver"
-            android:enabled="true">
-            <intent-filter android:priority="1000">
-                <action android:name="android.intent.action.PHONE_STATE" />
+        <receiver android:name=".MyReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE"></action>
             </intent-filter>
         </receiver>
 
