--- a/KimSuKiNaverAI/app/build.gradle
+++ b/KimSuKiNaverAI/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
@@ -27,6 +31,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     implementation "android.arch.persistence.room:runtime:2.2.2"
+    implementation 'com.yanzhenjie:permission:2.0.3'
 
 
 
