--- a/KimSuKiNaverAI/app/build.gradle
+++ b/KimSuKiNaverAI/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.yanzhenjie:permission:2.0.3'
 
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation "androidx.room:room-runtime:2.2.2"
+    implementation "androidx.cardview:cardview:1.0.0"
 
 
 }
