--- a/KimSuKiNaverAI/app/src/main/AndroidManifest.xml
+++ b/KimSuKiNaverAI/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
 
 
     <application
@@ -24,7 +25,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,16 +33,16 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".URLMediaPlayerActivity"></activity>
+        <activity android:name=".Activity.URLMediaPlayerActivity"></activity>
 
-        <receiver android:name=".MyReceiver" android:exported="true">
+        <receiver android:name=".Receiver.MyReceiver" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE"></action>
             </intent-filter>
         </receiver>
 
 
-        <service android:name="MyService"></service>
+        <service android:name=".Service.MyService"></service>
     </application>
 
 </manifest>
