--- a/KimSuKiNaverAI/app/build.gradle
+++ b/KimSuKiNaverAI/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation 'com.github.Cutta:TagView:1.3'
 
 }
