--- a/KimSuKiNaverAI/app/src/main/AndroidManifest.xml
+++ b/KimSuKiNaverAI/app/src/main/AndroidManifest.xml
@@ -6,16 +6,11 @@
     <uses-permission android:name="android.permission.STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
-
 
     <application
         android:allowBackup="true"
@@ -24,29 +19,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity
-            android:name=".Activity.MainActivity">
-
+        <activity android:name=".Activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activity.MainActivity">
 
-        <activity android:name=".Activity.URLMediaPlayerActivity"></activity>
+        </activity>
+        <activity android:name=".Activity.URLMediaPlayerActivity" />
 
         <receiver
             android:name=".Receiver.MyReceiver"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.PHONE_STATE"></action>
+                <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
         </receiver>
 
-
-        <service android:name=".Service.MyService"></service>
+        <service android:name=".Service.MyService" />
     </application>
 
 </manifest>
